syntax = "proto3";


package ru.merann.bopopov.autoshowroom.grpc;

import "CarRequest.proto";

message OrderRequest {
    CarRequest car = 1;
    repeated int64 option = 2;
    int64 client = 3;
}

message OrderResponse {
    int64 id = 1;
    SaveStatus status = 2;
    enum SaveStatus {
        SUCCESS = 0;
        FAIL = 1;
    }
}

service OrderService {
    rpc save(OrderRequest) returns (OrderResponse);
}